...
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODe-s8-u8u">
                                            <rect key="frame" x="133" y="7.6666666666666661" width="109" height="28.333333333333336"/>
                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                            <state key="normal" title="+ הוספת פילטר">
                                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </state>
                                            <connections>
                                                <action selector="onAddFilterPressed:" destination="jqS-d8-mKz" eventType="touchUpInside" id="oBR-O0-9GU"/>
                                            </connections>
                                        </button>
...
