//
//  rakBibiUITests.swift
//  rakBibiUITests
//
//  Created by Nadav Vanunu on 26/12/2018.
//  Copyright © 2018 Nadav Vanunu. All rights reserved.
//

import XCTest

class rakBibiUITests: XCTestCase {
    
    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.

    }

    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        let app = XCUIApplication()
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.buttons["+ הוספת פילטר"]/*[[".cells.buttons[\"+ הוספת פילטר\"]",".buttons[\"+ הוספת פילטר\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        let filterAlert = app.alerts
        let textField = filterAlert.textFields.element
        let value = "nadav_*&6"
        let before = tablesQuery.cells.count
        textField.typeText(value)
        app.alerts["הוספת פילטר חדש"].buttons["OK"].tap()
        
        XCTAssertTrue(tablesQuery.cells.count == before + 1)

        tablesQuery.staticTexts[value].swipeLeft()
        tablesQuery.buttons["Delete"].tap()
        XCTAssertTrue(tablesQuery.cells.count == before)

    }

}
